Add style attributes to properties

--- a/example_1.tex
+++ b/example_1.tex
@@ -5,11 +5,8 @@
 \begin{document}
 
 \begin{tikzpicture}
-  \tikzstyle{tensornode}=[draw,minimum size=1, fill=orange, rounded corners=0.1cm]
-  \tikzstyle{tensorleg}=[thick]
-
   \begin{luacode}
-    local mpt = require('mptikz')
+    mpt = require('mptikz')
     mpt.draw_node({N=2, S=3, E=1})
   \end{luacode}
 \end{tikzpicture}
