--- a/example_2.tex
+++ b/example_2.tex
@@ -1,17 +1,11 @@
 \RequirePackage{luatex85}
 \documentclass[tikz]{standalone}
-\usepackage{luatextra}
-
+\usepackage{mptikz}
 \begin{document}
 
 \begin{tikzpicture}
   \tikzstyle{tensornode}=[draw,minimum size=1, fill=green, rounded corners=0.1cm]
-
-  \begin{luacode}
-     local mpt = require('mptikz')
-     mpt.draw_node({N=1, tensor_name='A', tensor_style='tensornode', len_vertical_legs=1})
-  \end{luacode}
-
+  \tensor{{N=1, tensor_name='A', tensor_style='tensornode', len_vertical_legs=1}}
   \node at (A) {$A$};
   \node [anchor=west] at (A_N1) {$i$};
 \end{tikzpicture}
