fixed examples 1 2 and 3 to be compatible with current package

--- a/example_2.tex
+++ b/example_2.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \begin{tikzpicture}
-  \tikzstyle{tensornode}=[draw,minimum size=1, fill=green, rounded corners=0.1cm]
+  \tikzstyle{tensornode}=[draw,minimum size=1, fill=orange, rounded corners=0.1cm]
   \tensor{{N=1, tensor_name='A', tensor_style='tensornode', len_vertical_legs=1}}
   \node at (A) {$A$};
   \node [anchor=west] at (A_N1) {$i$};
