--- a/example_3.tex
+++ b/example_3.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \begin{tikzpicture}
-  \tensorstyle{{len_vertical_legs=0.25, tensor_style='draw, fill=orange, rounded corners=0.1cm'}}
+  \tensorstyle{{len_vertical_legs=0.25, tensor_style='draw, fill=orange, rounded corners=0.1cm', leg_style='line width= .2mm', leg_color_NS='black', leg_color_EW='black'}}
   % Draw MPA manually
   \tensor{{S=1, W=1, E=1, x=0}}
   \tensor{{S=1, W=1, E=1, x=1.25}}
